# yandex-cloud-bot

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: chat_server.rs  db.rs  handler.rs  main.rs
