[package]
name = "yandex-cloud-bot"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
pretty_env_logger = "0.5.0"
url = "2.5.0"
log = "0.4.21"
anyhow = "1.0.82"
serde = { version = "1.0.200" }
tokio-stream = "0.1.15"
chrono = "0.4.38"
openssl = { version = "0.10.64", features = ["vendored"] }
openssl-sys = "0.9.102"
log2 = "0.1.11"
rusqlite = { version = "0.31.0", features = ["bundled"] }
log4rs = { version = "1.3.0", features = ["file_appender", "pattern_encoder"] }