[package]
name = "yandex-cloud-bot"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
#pretty_env_logger = "0.5.0"
#url = "2.5.4"
log = "0.4.27"
#anyhow = "1.0.98"
serde = { version = "1.0.219" }
#tokio-stream = "0.1.17"
chrono = "0.4.41"
#openssl = { version = "0.10.72", features = ["vendored"] }
#openssl-sys = "0.9.108"
#log2 = "0.2.1"
rusqlite = { version = "0.35.0", features = ["bundled"] }
log4rs = { version = "1.3.0", features = ["file_appender", "pattern_encoder"] }